--- a/GoogleMapPolylineExample/appsettings.json
+++ b/GoogleMapPolylineExample/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-IC3J2MG;Initial Catalog=CALPIDS29;User ID=ezeradmin;Password=Lena1995;"
+    "DefaultConnection": "Server=DESKTOP-IC3J2MG;Initial Catalog=CALPIDS29;Trusted_Connection=True;MultipleActiveResultSets=true;"
+    //"DefaultConnection": "Server=DESKTOP-IC3J2MG;Initial Catalog=CALPIDS29;Persist Security Info=False;User ID=ezeradmin;Password=Lena1995;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+
   },
   "Logging": {
     "LogLevel": {
